Fixed issue when user agreement checkbox was misaligned on some of the websites

--- a/reactjs/src/foundation/scss/custom/_comment-form.scss
+++ b/reactjs/src/foundation/scss/custom/_comment-form.scss
@@ -14,14 +14,19 @@
     &__terms {
       display: flex;
       padding: 10px 0;
+      align-items: center;
 
       &-agreement {
         input[type="checkbox"] {
           vertical-align: middle;
-          margin-right: 14px;
+          margin: 0 14px 0 5px;
+          padding: 0;
         }
 
         label {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
           font-weight: normal;
           color: $semi-hidden-color;
           font-size: $font-size;
